<resources>
    <string name="app_name">Weekender</string>

    <string name="delete">Delete</string>

    <string name="my_trips">My Trips</string>
    <string name="new_trip">New Trip</string>
    <string name="find_trips">Find Trip</string>
    <string name="van_content_desc">Camper Van (art by Freepik)</string>

    <string name="trip_menu_add_place">Add Place</string>
    <string name="trip_title_label">Trip Name</string>
    <string name="trip_title_hint">My Trip</string>
    <string name="trip_start_label">Start Date</string>
    <string name="trip_end_label">End Date</string>
    <string name="trip_lengths_format">%1$d days, %2$d miles</string>
    <string name="trip_dates_format">%1$s - %2$s</string>
    <string name="submit_button">Submit</string>

    <string name="view_place_details">View Place Details</string>
    <string name="open_in_google_maps">Open in Google Maps</string>

    <string name="route_length_format">%1$d miles, %2$s</string>
    <string name="destinations_title">Destinations</string>
    <string name="route_add_destination">Add Destination</string>

    <string name="place_name_label">Name</string>
    <string name="place_name_hint">New Place</string>
    <string name="place_address_label">Address</string>
    <string name="place_address_hint">123 Street Rd, City, ST</string>

    <string name="note_title_hint">Title</string>
    <string name="note_content_hint">Your note here</string>

    <string name="trip_tab_map">Map</string>
    <string name="trip_tab_route">Route</string>
    <string name="trip_tab_places">Places</string>
    <string name="trip_tab_notes">Notes</string>

    <string name="title_activity_trip">TripActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="place_add_button">Add Place</string>
    <string name="place_image_desc">Photo of location</string>

    <string name="place_notes_title">Notes</string>
    <string name="place_notes_add_note_button">New Note</string>
    <string name="place_menu_delete_place">Delete Place</string>
    <string name="delete_place_confirm">Permanently delete %1$s?</string>

    <string name="notes_menu_edit">Edit Note</string>
    <string name="notes_menu_delete">Delete Note</string>

    <string name="title_activity_place_tabbed">Place Overview</string>
    <string name="place_menu_add_note">Add Note</string>
    <string name="place_tab_info">Info</string>
    <string name="place_tab_notes">Notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_trip_map">Map</string>
</resources>
